Fix top padding of Dropdown-Content on mobile

--- a/client/public/styles/dropdown.css
+++ b/client/public/styles/dropdown.css
@@ -94,6 +94,7 @@
         left: 0;
         box-sizing: border-box;
         width: 100%;
+        padding-top: 24px;
         transition: bottom .5s ease;
         border-radius: 10px 10px 0 0;
     }
